--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "uuid": "^3.3.2",
+    "vue": "^2.6.10",
+    "vue-timeselector": "^0.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
